assets/css/custom.css
:root {
    --background-color: white;
    --text-color: #515151;
    --heading-color: #313131;
    --tag-background: #202020;
    --tag-text-color: white;
    --blockquote-color: #7a7a7a;
    --post-time-color: #757575;
}

@media(prefers-color-scheme: dark) {
    :root {
    --background-color: #202020;
    --text-color: #f0f0f0;
    --heading-color: white;
    --tag-background: white;
    --tag-text-color: #202020;
    --blockquote-color: #bababa;
    --post-time-color: #bababa;
    }
}

[data-theme='dark'] {
    --background-color: #202020;
    --text-color: #f0f0f0;
    --heading-color: white;
    --tag-background: white;
    --tag-text-color: #202020;
    --blockquote-color: #bababa;
    --post-time-color: #bababa;
}

div.image-caption {
    display: inline-block;
    padding: 10px;
    margin: 10px;
    border: 2px solid #cccccc;
    text-align: center;
    font-size: 0.8em;
    font-style: italic;
}

.tag {
    color: var(--tag-text-color);
}

div.tag-container {
    width: fit-content(300px);
    margin-bottom: 1rem;
    overflow-x: auto;
    scrollbar-width: 0rem;
    white-space: nowrap;
    overflow-y: hidden;
}

::-webkit-scrollbar {
    display: none;
}

.tag-button {
    background-color: var(--tag-background);
    border: none;
    color: var(--tag-text-color);
    padding: 7px 12px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 8px;
}

.read-more-link {
    color: #0091ff;
    text-decoration: none;
}

